# region-growing

./: .gitignore  AGENTS.md  INSTALLATION.md  README.md  RESUMEN_EJECUTIVO.md  pyproject.toml  sentinelhub-secrets.txt
.claude/: settings.local.json
backend/: .env.example  README.md  app.py  pyproject.toml  requirements.txt  test_sentinel_connection.py  verify_config.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  analysis.py  embeddings.py  health.py  hierarchical.py
backend/app/api/schemas/: __init__.py  requests.py  responses.py
backend/app/controllers/: analysis_controller.py
backend/app/services/: embeddings_service.py  geo_converter_service.py  ndvi_service.py  region_growing_algorithm.py  region_growing_service.py  sentinel_hub_service.py
backend/app/utils/: __init__.py  logging_config.py  timeout.py
backend/config/: config.py
backend/tests/: test_analysis.py  test_health.py
context/: propuesta_mejorada.md
data/dynamic_world/: bajio_dw.tif  mexicali_dw.tif  sinaloa_dw.tif
data/esa_worldcover/: bajio_esa_worldcover.tif.aux.xml  bajio_esa_worldcover_merged.tif.aux.xml
data/results/: method_comparison.csv  mgrg_summary.csv
docs/: GUIA_DESCARGA_IMAGENES.md  planeacion.md  quickstart.md
docs/fixes/: sentinel-hub-credentials-fix.md
docs/us-planning/: us-001.md  us-002-plan.md  us-003-plan.md  us-004.md  us-005-plan.md  us-006.md  us-007.md  us-008.md  us-009.md  us-010.md  us-011.md  us-012_plan.md
docs/us-resolved/: VERIFICACION_FINAL_US-006.md  us-001.md  us-002-complete.md  us-003.md  us-004.md  us-005.md  us-006.md  us-007.md  us-008.md  us-009.md  us-010.md  us-011.md  us-012.md
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/composables/: useAnalysis.ts  useApi.ts  useMap.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/plugins/: maplibre.client.ts
frontend/src/: App.vue  main.js  style.css
frontend/stores/: analysis.ts
frontend/types/: index.ts
img/: README.md
notebooks/experimental/: 03_real-prithvi-demo.ipynb  09_hierarchical_pipeline_validation.ipynb  mgrg-demo.ipynb
scripts/: analyze_dynamic_world.py  analyze_region.py  compare_zones.py  diagnose_sentinel_data.py  download_dynamic_world.py  download_dynamic_world_manual.md  download_hls_image.py  download_prithvi.py  generate_segmentations.py  inspect_prithvi_checkpoint.py  profile_region_growing.py  redownload_with_recent_dates.py  test_both_models.py  test_classification_data.py  test_classification_simple.py  test_confusion_matrix_display.py  test_embeddings.py  test_notebook_path.py  test_path_resolution.py  test_prithvi_inference.py  test_real_prithvi.py
src/: __init__.py
tests/: __init__.py
(+81 files in other folders)
