[tool.poetry]
name = "sistema-deteccion-estres-vegetal"
version = "1.0.0"
description = "Sistema Híbrido de Detección de Estrés Vegetal"
authors = ["Equipo 24"]
packages = [{include = "src"}]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch_cu129"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core dependencies (src/)
numpy = "~2.2.4"
opencv-python = "^4.12.0.88"
scikit-learn = "^1.7.2"
sentinelhub = "^3.11.3"
# PyTorch with CUDA 12.9 support
torch = {version = "^2.8.0", source = "pytorch_cu129"}
pillow = "^12.0.0"
scipy = "^1.16.3"

# Prithvi dependencies
timm = "^1.0.11"
einops = "^0.8.0"
huggingface-hub = "^1.1.0"

# Geospatial
shapely = "^2.1.2"
pyproj = "^3.7.2"
geojson = "^3.2.0"

# Backend (FastAPI)
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"

# Utilities
requests = "^2.32.5"
python-dateutil = "^2.9.0"

# Notebooks
jupyter = "^1.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipykernel = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.0"
black = "^25.9.0"
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"