[tool.poetry]
name = "vision-backend"
version = "2.0.0"
description = "Sistema Híbrido de Detección de Estrés Vegetal - Backend FastAPI"
authors = ["Equipo 24 <equipo24@example.com>"]
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"

# Sentinel Hub
sentinelhub = "^3.11.3"

# Image Processing
# Pin numpy to a 2.2.x series compatible with opencv-python's constraint (>=2,<2.3.0)
numpy = "~2.2.4"
opencv-python = "^4.12.0.88"
pillow = "^12.0.0"
scipy = "^1.16.3"

# Geospatial
shapely = "^2.1.2"
pyproj = "^3.7.2"
geojson = "^3.2.0"

# Utilities
python-dotenv = "^1.2.1"
requests = "^2.32.5"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
black = "^25.9.0"
ruff = "^0.14.4"

[tool.poetry.group.test.dependencies]
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
